@@ -4,6 +4,9 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
+* Output contents of error log as part of debugging output
+  [lentinj]
+
 * Debugging output.
   [lentinj]
 
